objects/Best_Practice_Evaluation__c.object
<CustomObject>
    <fields>
        <fullName>ACL_Guidelines_Followed2__c</fullName>
        <label>ACL Guidelines Followed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACL_Guidelines_Followed__c</fullName>
        <inlineHelpText>all ads are created using ACL, and all ad copy template values are filled out</inlineHelpText>
        <label>ACL Guidelines Followed (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Able_to_Get_Lead_s_Contact_Information__c</fullName>
        <label>Able to Get Lead's Contact Information?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Acceptance_Exception__c</fullName>
        <label>Account Acceptance Exception</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Acceptance_Issues__c</fullName>
        <label>Account Acceptance Issues</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Channel_Type__c</fullName>
        <label>Account Channel Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Transactional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Issue__c</fullName>
        <label>Account Issue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Conversion</fullName>
                </value>
                <value>
                    <fullName>Underspend</fullName>
                </value>
                <value>
                    <fullName>Overspend</fullName>
                </value>
                <value>
                    <fullName>Lead Quality</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Best Practice Evaluations</relationshipLabel>
        <relationshipName>Best_Practice_Evaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Originally_Set_Up_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Originally Set Up By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Best_Practice_Evaluations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Setup_For__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Build Evaluation For</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Best_Practice_Evaluations6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ad_Copy_Formatting__c</fullName>
        <label>Ad Copy Formatting</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
                <value>
                    <fullName>Error Found/Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ad_Extensions__c</fullName>
        <label>Ad Extensions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address_Consistency__c</fullName>
        <label>Address Consistency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ads_Overall_Grade2__c</fullName>
        <description>Average of the Ads grades for the setup evaluation</description>
        <formula>if (isblank(ACL_Guidelines_Followed__c), 
((Three_Ads__c +    Read_Correctly__c +  Consistency__c +  Landing_Pages_Match__c ) / 4),
((Three_Ads__c + ACL_Guidelines_Followed__c +  Read_Correctly__c +  Consistency__c +  Landing_Pages_Match__c ) / 5))</formula>
        <label>Ads Overall Grade (%)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>All_Errors_Fixed__c</fullName>
        <inlineHelpText>all provider errors are fixed</inlineHelpText>
        <label>All Errors Fixed (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Analyst_Notes__c</fullName>
        <label>Analyst Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Appropriate_Banner_Images__c</fullName>
        <label>Appropriate Banner Images</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
                <value>
                    <fullName>Error Found/Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Appropriate_Campaign_Selection__c</fullName>
        <label>Appropriate Campaign Selection</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
                <value>
                    <fullName>Error Found/Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Appropriate_Error_Free_Business_Descript__c</fullName>
        <label>Appropriate/Error Free Business Descript</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Appropriate_Name_Campaign__c</fullName>
        <label>Appropriate Name Campaign</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Area_Served_Description_Single_City__c</fullName>
        <label>Area Served Description Single City</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_User_Roles__c</fullName>
        <label>Assigned User Roles</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Audit_Fix_Notes__c</fullName>
        <label>Audit Fix Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Avoided_Site_Content_Overlap__c</fullName>
        <inlineHelpText>If similar client IDs were noted on questionnaire, site layout, colors, and content do not overlap.</inlineHelpText>
        <label>Avoided Site/Content Overlap</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPM_Overall_Grade2__c</fullName>
        <description>Average of the BPM grading fields on the setup evaluation</description>
        <formula>if(isblank(USPs_Added__c), ((Serving_Area_bpm__c +  Display_URL__c) / 2), 
((Serving_Area_bpm__c +  Display_URL__c +  USPs_Added__c) / 3))</formula>
        <label>BPM Overall Grade (%)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Banner_Customization__c</fullName>
        <inlineHelpText>To track Website Tier Compliance - LOCAL accounts only</inlineHelpText>
        <label>Banner Customization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Compliant</fullName>
                </value>
                <value>
                    <fullName>Non Compliant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Batch_Added_Terms2__c</fullName>
        <label>Batch Added Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
                <value>
                    <fullName>Error Found/Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Batch_Added_Terms__c</fullName>
        <inlineHelpText>no geo terms were batch added (exceptions apply to cities and abbreviations not present in our system).</inlineHelpText>
        <label>Batch Added Terms (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Best_source_for_List_of_Live_SEO_accou__c</fullName>
        <inlineHelpText>What is the BEST source for newly updated account Information?</inlineHelpText>
        <label>Source for list of live SEO accounts:</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FMA</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>Excel Spreadsheet</fullName>
                </value>
                <value>
                    <fullName>Google Doc</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Broken_Links2__c</fullName>
        <label>Broken Links</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
                <value>
                    <fullName>Error Found/Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Broken_Links__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Broken Links</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Build_Process_Differences__c</fullName>
        <inlineHelpText>Describe any situation where the build process was customized or otherwise deviated from build processes for Local.</inlineHelpText>
        <label>Build Process Differences</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Build_Process_Notes__c</fullName>
        <inlineHelpText>Add any relevant notes here.</inlineHelpText>
        <label>Build Process Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Build_Process_Used__c</fullName>
        <inlineHelpText>Which build process was implemented for this relationship?</inlineHelpText>
        <label>Build Process Used</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manually Built</fullName>
                </value>
                <value>
                    <fullName>IT Pro</fullName>
                </value>
                <value>
                    <fullName>Never Built</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Built_Process_Timeframe__c</fullName>
        <inlineHelpText>When were the most listings built for this relationship?</inlineHelpText>
        <label>Built Process Timeframe</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bulk_Campaign_Tool__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bulk Campaign Tool</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bulk_URL__c</fullName>
        <label>Bulk URL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bulk_vs_Individual_Google_Accounts__c</fullName>
        <inlineHelpText>Were the franchisees Google Local accounts build under a master login or individual logins?</inlineHelpText>
        <label>Bulk vs. Individual Google Accounts:</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bulk Upload</fullName>
                </value>
                <value>
                    <fullName>Individual Accounts</fullName>
                </value>
                <value>
                    <fullName>Mixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Description__c</fullName>
        <label>Business Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CS_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CS Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Best_Practice_Evaluations5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_Tracking_all_numbers_configured__c</fullName>
        <label>Call Tracking - local numbers configured</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calls_to_Action__c</fullName>
        <inlineHelpText>website conversion best practices are followed</inlineHelpText>
        <label>Calls to Action (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Capitalization_Issues__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Capitalization Issues</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Flow_Followed__c</fullName>
        <label>Case Flow Followed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
                <value>
                    <fullName>Error Found/Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_in_Review__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case in Review</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Best Practice Evaluations</relationshipLabel>
        <relationshipName>Best_Practice_Evaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Categories__c</fullName>
        <label>Categories</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Transactional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Citations_Build_Time_Period_approx__c</fullName>
        <inlineHelpText>Around what date were the most listings built for this relationship?</inlineHelpText>
        <label>Citations Build Time Period (approx)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Claim_Status__c</fullName>
        <label>Claim Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <label>Client ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_works_with_existing_or_prev__c</fullName>
        <inlineHelpText>Does the client have a previous or existing vendor for SEO?</inlineHelpText>
        <label>Client has existing or previous vendor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clients_metrics_for_SEO_reporting__c</fullName>
        <inlineHelpText>Select all that apply</inlineHelpText>
        <label>Clients metrics for SEO reporting:</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unpaid Calls</fullName>
                </value>
                <value>
                    <fullName>Emails</fullName>
                </value>
                <value>
                    <fullName>Website Visits</fullName>
                </value>
                <value>
                    <fullName>PPL</fullName>
                </value>
                <value>
                    <fullName>Keyword Ranking</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Color_Customization__c</fullName>
        <inlineHelpText>To track Website Tier Compliance - LOCAL accounts only</inlineHelpText>
        <label>Color Customization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Compliant</fullName>
                </value>
                <value>
                    <fullName>Non Compliant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Colors_for_Scoring__c</fullName>
        <formula>IMAGE ("https://na4.salesforce.com/servlet/servlet.FileDownload?file=015600000009Hmo", "Green", 35, 35)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Colors for Scoring</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name_in_Video__c</fullName>
        <label>Company Name in Video</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Name_on_YouTube__c</fullName>
        <label>Company Name on YouTube</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consistency__c</fullName>
        <inlineHelpText>a. ads speak specifically to every SC
            b. serving area/location used within the ad is the same as on the landing page
            c. all USPs/promotions used within the ad are present and visible on the landing  
                pages</inlineHelpText>
        <label>Consistency (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Consistent_Geo_Messaging__c</fullName>
        <label>Consistent Geo Messaging</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Form__c</fullName>
        <label>Contact Form (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contact_Forms_Present_if_applicable__c</fullName>
        <inlineHelpText>contact form present on website</inlineHelpText>
        <label>Contact Form Present (if applicable) (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contact_form_tested__c</fullName>
        <label>Contact form tested?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Content_Contains_Keyword__c</fullName>
        <label>Content Contains Keywords</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Content_Contains_Keywords__c</fullName>
        <label>Content Contains Keywords OLD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Corporate_Branding_Standards__c</fullName>
        <inlineHelpText>Describe any corporate or branding standards required by the client</inlineHelpText>
        <label>Corporate / Branding Standards</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_FMA_ID__c</fullName>
        <label>Corporate FMA ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Relationship_Agreement_Type__c</fullName>
        <label>Corporate Relationship Agreement Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Preferred Vendor (0)</fullName>
                </value>
                <value>
                    <fullName>Parent Pays (1)</fullName>
                </value>
                <value>
                    <fullName>Mixed (2)</fullName>
                </value>
                <value>
                    <fullName>Bottom Up (3)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Corporate_Type__c</fullName>
        <label>Corporate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manufacturer (0)</fullName>
                </value>
                <value>
                    <fullName>Franchisor (1)</fullName>
                </value>
                <value>
                    <fullName>Multi Location (2)</fullName>
                </value>
                <value>
                    <fullName>Other (3)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Correct_Comp__c</fullName>
        <label>Correct Company Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Correct_Company_Name__c</fullName>
        <label>Company Name Correct</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Correct_Domain__c</fullName>
        <label>Correct Domain</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Correct_Number_of_Service_Groups__c</fullName>
        <inlineHelpText>account has optimal amount of SGs without causing overspend/underspend</inlineHelpText>
        <label>Correct # of Service Groups (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Correct_Segment_Implementation__c</fullName>
        <inlineHelpText>Is this client setup under a logical segment?</inlineHelpText>
        <label>Correct Segment Implementation?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Correct_phone_number_in_header__c</fullName>
        <label>Correct phone number in header?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Citation_Build_Process_Used__c</fullName>
        <label>Current Citation Build Process Used</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manually Built</fullName>
                </value>
                <value>
                    <fullName>YCN Activated</fullName>
                </value>
                <value>
                    <fullName>Never Built</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_Template_Used__c</fullName>
        <inlineHelpText>Are custom YO templates used?</inlineHelpText>
        <label>Custom Template Used</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dangerous_Duplicates2__c</fullName>
        <label>Dangerous Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
                <value>
                    <fullName>Error Found/Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dangerous_Duplicates__c</fullName>
        <inlineHelpText>no dangerous duplicates are present within the geo template</inlineHelpText>
        <label>Dangerous Duplicates (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Data_Sync_with_ASW__c</fullName>
        <inlineHelpText>Is all data found in ASW the same as on-page or do differences exist?</inlineHelpText>
        <label>Data Sync with ASW</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Synced Correctly</fullName>
                </value>
                <value>
                    <fullName>Sync Mismatches</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>